# bitBeam

./: .gitignore  Cargo.toml  bitbeem.sqlite  flake.nix
.direnv/: flake-profile-1-link  flake-profile-4-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 004vk3n8jlx9vw4nzy1f0d2dhsy7wz52-source  52hxk3ygip5xv1jrjymnn4yh9rqikj91-source  z8zpl9cslb32bn0fcc2r8hlssxqlrdpq-source
src/: api.rs  data.rs  main.rs
