[package]
name = "bitBeam"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
bytes = "1.10"
chrono = {version = "0.4",  features = ["serde"]}
extract = "0.1"
fern = "0.7.1"
log = {version = "0.4", feature = "std"}
rand = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [
    "runtime-tokio",      # pick exactly one runtime
    "tls-rustls",         # pick exactly one TLS backend
    "any",                # for sqlx::any abstraction
    "postgres",           # Postgres driver
    "sqlite",             # SQLite driver
    "chrono",             # (optional) chrono date/time support
    "migrate"             # for embed migrations
] }
tokio = {version = "1.45", features = ["full"]}
uuid = "1.16"
